--- a/src/global.css
+++ b/src/global.css
@@ -38,6 +38,15 @@ h1 {
   padding: 3.5em 0 0.5em;
   text-align: center;
 }
+h2 {
+  background-image: url(assets/learn_logo.png);
+  background-position: center 0.25em;
+  background-repeat: no-repeat;
+  background-size: auto 1.5em;
+  margin-top: 0;
+  padding: 2.5em 0 0.5em;
+  text-align: center;
+}
 
 a,
 .link {
@@ -181,6 +190,9 @@ aside footer *:last-child {
   }
   h1 {
     background-image: url(assets/logo-white.svg);
+  }
+  h2 {
+    background-image: url(assets/learn_logo.png);
   }
   input:focus {
     box-shadow: 0 0 10em rgba(255, 255, 255, 0.02) inset;
